--- a/Valutaomregner/MainWindow.xaml
+++ b/Valutaomregner/MainWindow.xaml
@@ -7,6 +7,15 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Label Content="" BorderThickness="100" x:Name="Output" HorizontalAlignment="Left" Height="57" Margin="431,154,0,0" VerticalAlignment="Top" Width="179"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="189,182,0,0" TextWrapping="Wrap" Text="" x:Name="Input" VerticalAlignment="Top" Width="120"/>
+        <Button Content="udregn" HorizontalAlignment="Left" Margin="203,246,0,0" VerticalAlignment="Top" Width="75"/>
+        <ComboBox HorizontalAlignment="Left" x:Name="From" Margin="189,111,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBoxItem Tag="10000">
+                DKK
+            </ComboBoxItem>
+        </ComboBox>
+        <ComboBox HorizontalAlignment="Left" x:Name="To" Margin="474,111,0,0" VerticalAlignment="Top" Width="120"/>
+
     </Grid>
 </Window>
